fixed spacing

--- a/src/app/routes/song/song.component.scss
+++ b/src/app/routes/song/song.component.scss
@@ -32,6 +32,10 @@ pre {
 
   .chunk.hide-chords {
     padding-top: 15px;
+
+    &:first-child {
+      padding-top: 10px;
+    }
   }
 
   .chunk.verse {
